99% finished, some content missing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="theme-color" content="#ffffff" />
     <title>Dev RJ</title>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -70,7 +73,37 @@
                 asperiores?
               </p>
             </div>
-            <img src="img/projects/onlineChessCombined.jpg" alt="" />
+            <img
+              src="img/projects/onlineChessCombined.jpg"
+              alt=""
+              data-aos="zoom-in"
+            />
+            <div class="tags">
+              <ul>
+                <li>React</li>
+                <li>Python</li>
+                <li>Flask</li>
+                <li>Socket.IO</li>
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+            <div class="preview">
+              <a
+                href="https://romanj55.github.io/chessremake/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/RomanJ55/chessremake"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Source</a
+              >
+            </div>
           </div>
           <div class="project blue">
             <div class="project__desc">
@@ -80,7 +113,35 @@
                 asperiores?
               </p>
             </div>
-            <img src="img/projects/imageFilterCombined.jpg" alt="" />
+            <img
+              src="img/projects/imageFilterCombined.jpg"
+              alt=""
+              data-aos="zoom-in"
+            />
+            <div class="tags">
+              <ul>
+                <li>React</li>
+                <li>CSS-Filters</li>
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+            <div class="preview">
+              <a
+                href="https://romanj55.github.io/imagefilter/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/RomanJ55/imagefilter"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Source</a
+              >
+            </div>
           </div>
           <div class="project blue">
             <div class="project__desc">
@@ -90,7 +151,29 @@
                 asperiores?
               </p>
             </div>
-            <img src="img/projects/sortingAlgo-java.png" alt="" />
+            <img
+              src="img/projects/sortingAlgo-java.png"
+              alt=""
+              data-aos="zoom-in"
+            />
+            <div class="tags">
+              <ul>
+                <li>Java</li>
+                <li>Algorithms</li>
+                <li>Sorting</li>
+                <li>Threading</li>
+              </ul>
+            </div>
+            <div class="preview">
+              <a class="btn">No live demo</a>
+              <a
+                href="https://github.com/RomanJ55/chessremake"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Source</a
+              >
+            </div>
           </div>
           <div class="project">
             <div class="project__desc">
@@ -100,7 +183,29 @@
                 asperiores?
               </p>
             </div>
-            <img src="img/projects/pathfindingAlgo-python.png" alt="" />
+            <img
+              src="img/projects/pathfindingAlgo-python.png"
+              alt=""
+              data-aos="zoom-in"
+            />
+            <div class="tags">
+              <ul>
+                <li>Python</li>
+                <li>PyGame</li>
+                <li>Pathfinding</li>
+                <li>Algorithms</li>
+              </ul>
+            </div>
+            <div class="preview">
+              <a class="btn">No live demo</a>
+              <a
+                href="https://github.com/RomanJ55/chessremake"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Source</a
+              >
+            </div>
           </div>
 
           <div class="project">
@@ -111,10 +216,41 @@
                 asperiores?
               </p>
             </div>
-            <img src="img/projects/magXShopCombined.jpg" alt="" />
+            <img
+              src="img/projects/magXShopCombined.jpg"
+              alt=""
+              data-aos="zoom-in"
+            />
+            <div class="tags">
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>AoS</li>
+                <li>Font Awesome</li>
+              </ul>
+            </div>
+            <div class="preview">
+              <a
+                href="https://romanj55.github.io/MagicShop/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/RomanJ55/MagicShop"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                >Source</a
+              >
+            </div>
           </div>
           <div class="project-end">
-            <a href="https://github.com/RomanJ55?tab=repositories"
+            <a
+              href="https://github.com/RomanJ55?tab=repositories"
+              target="_blank"
+              rel="noopener noreferrer"
               >More Projects <img src="img/arrow-circle-right.svg" alt=""
             /></a>
           </div>
@@ -123,11 +259,10 @@
     </section>
 
     <section class="skills" id="skillsSection">
-      <div class="bg"></div>
       <div class="container">
         <h2>My skills</h2>
         <div class="cards">
-          <div class="card glass">
+          <div class="card glass" data-aos="fade-right">
             <h3>Languages</h3>
             <div class="flex">
               <p class="left">
@@ -142,33 +277,33 @@
               </p>
             </div>
           </div>
-          <div class="card glass">
-            <h3>Languages</h3>
+          <div class="card glass" data-aos="fade-left">
+            <h3>Frameworks/Libraries</h3>
             <div class="flex">
               <p class="left">
-                Python<br />
-                Javascript<br />
-                Java
+                React<br />
+                Flask<br />
+                AoS
               </p>
               <p class="right">
-                HTML<br />
-                CSS<br />
-                SQL
+                Socket.IO<br />
+                Django<br />
+                GSAP
               </p>
             </div>
           </div>
-          <div class="card glass">
-            <h3>Languages</h3>
+          <div class="card glass" data-aos="zoom-in">
+            <h3>Other</h3>
             <div class="flex">
               <p class="left">
-                Python<br />
-                Javascript<br />
-                Java
+                Sass<br />
+                Tailwind<br />
+                Bootstrap
               </p>
               <p class="right">
-                HTML<br />
-                CSS<br />
-                SQL
+                Git & Github<br />
+                GIMP<br />
+                Adobe XD
               </p>
             </div>
           </div>
@@ -180,7 +315,7 @@
       <div class="container">
         <h2>What you'll get</h2>
         <div class="flex">
-          <div class="card">
+          <div class="card" data-aos="flip-right">
             <h3>Unique design</h3>
             <div class="card__desc flex">
               <p>
@@ -190,7 +325,7 @@
               <img src="img/pencil.svg" alt="" />
             </div>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <h3>Responsive Layout</h3>
             <div class="card__desc flex">
               <p>
@@ -200,7 +335,7 @@
               <img src="img/mobile-check.svg" alt="" />
             </div>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-right">
             <h3>Multiple Revisions</h3>
             <div class="card__desc flex">
               <p>
@@ -210,7 +345,7 @@
               <img src="img/search-replace.svg" alt="" />
             </div>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <h3>Fast delivery</h3>
             <div class="card__desc flex">
               <p>
@@ -227,7 +362,7 @@
     <section class="contact" id="contactSection">
       <div class="container">
         <h2>Contact me</h2>
-        <form class="card">
+        <form class="card" data-aos="flip-up">
           <label for="name">Name:</label>
           <input type="text" name="name" id="name" />
           <label for="email">Email:</label>
@@ -245,9 +380,24 @@
           <img src="img/logo.svg" alt="" class="footer-logo" />
           <div class="social">
             <div class="flex">
-              <a href="#"><img src="img/github.svg" alt="" /></a>
-              <a href="#"><img src="img/facebook.svg" alt="" /></a>
-              <a href="#"><img src="img/twitter.svg" alt="" /></a>
+              <a
+                href="https://github.com/RomanJ55"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="img/github.svg" alt=""
+              /></a>
+              <a
+                href="https://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="img/facebook.svg" alt=""
+              /></a>
+              <a
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="img/twitter.svg" alt=""
+              /></a>
             </div>
           </div>
         </div>
@@ -261,5 +411,7 @@
         </nav>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
