replaced placeholder texts, fixed project images, minor style adjustments

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
             <div class="project__desc">
               <h3>Online Chess Game</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
-                asperiores?
+                Online Chess Game running on React as the frontend and Python in
+                the backend. Using Socket.IO for real time data exchange and
+                multiple game rooms.
               </p>
             </div>
             <img
@@ -109,8 +110,9 @@
             <div class="project__desc">
               <h3>Image Filter</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
-                asperiores?
+                Using React to apply CSS-filters like Contrast, Blur,
+                Hue-rotation etc. to images. Supports any image from a given
+                URL.
               </p>
             </div>
             <img
@@ -145,10 +147,11 @@
           </div>
           <div class="project blue">
             <div class="project__desc">
-              <h3>Sorting Algorithm Visualizer</h3>
+              <h3>Sorting Algorithm Visual</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
-                asperiores?
+                Visualizes different Sorting Algorithms like merge sort, heap
+                sort etc. in real time. Used Javas build-in Swing module for the
+                GUI.
               </p>
             </div>
             <img
@@ -177,10 +180,11 @@
           </div>
           <div class="project">
             <div class="project__desc">
-              <h3>Pathfinding Algorithm Visualizer</h3>
+              <h3>Pathfind Algorithm Visual</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
-                asperiores?
+                Visualizes visited & unvisited nodes and the path witch the
+                algorithm has found in real time. Supports: Astar, BFS and
+                Dijkstra Algorithms.
               </p>
             </div>
             <img
@@ -212,8 +216,8 @@
             <div class="project__desc">
               <h3>MagX Magic Shop</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut,
-                asperiores?
+                A website with the theme of a Magic Shop. Includes custom assets
+                and custom created animations. Fully responsive layout.
               </p>
             </div>
             <img
@@ -316,44 +320,44 @@
         <h2>What you'll get</h2>
         <div class="flex">
           <div class="card" data-aos="flip-right">
-            <h3>Unique design</h3>
-            <div class="card__desc flex">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-                quis.
-              </p>
+            <div class="title flex">
+              <h3>Unique design</h3>
               <img src="img/pencil.svg" alt="" />
             </div>
+            <p>
+              No templates. No random stock. Your design will be a one of a
+              kind!
+            </p>
           </div>
           <div class="card" data-aos="flip-left">
-            <h3>Responsive Layout</h3>
-            <div class="card__desc flex">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-                quis.
-              </p>
+            <div class="title flex">
+              <h3>Responsive Layout</h3>
               <img src="img/mobile-check.svg" alt="" />
             </div>
+            <p>
+              Looks great on all screens sizes. From tiny mobile devices to big
+              flatscreens!
+            </p>
           </div>
           <div class="card" data-aos="flip-right">
-            <h3>Multiple Revisions</h3>
-            <div class="card__desc flex">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-                quis.
-              </p>
+            <div class="title flex">
+              <h3>Multiple Revisions</h3>
               <img src="img/search-replace.svg" alt="" />
             </div>
+            <p>
+              Whenever you feel like you want something changed, I'll adjust it
+              for free!
+            </p>
           </div>
           <div class="card" data-aos="flip-left">
-            <h3>Fast delivery</h3>
-            <div class="card__desc flex">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde,
-                quis.
-              </p>
+            <div class="title flex">
+              <h3>Fast delivery</h3>
               <img src="img/fastright.svg" alt="" />
             </div>
+            <p>
+              Don't like waiting too long? You won't have to! I'll complete your
+              order within 48 hours!
+            </p>
           </div>
         </div>
       </div>
