skills section rewoked

--- a/index.html
+++ b/index.html
@@ -280,50 +280,36 @@
       <div class="container">
         <h2>My skills</h2>
         <div class="cards">
-          <div class="card glass" data-aos="fade-right">
+          <div class="card glass">
             <h3>Languages</h3>
-            <div class="flex">
-              <p class="left">
-                Python<br />
-                Javascript<br />
-                Java
-              </p>
-              <p class="right">
-                HTML<br />
-                CSS<br />
-                SQL
-              </p>
-            </div>
+            <p class="skill">
+              Python<br />
+              Javascript<br />
+              Java<br />
+              HTML<br />
+              CSS<br />
+              SQL
+            </p>
           </div>
-          <div class="card glass" data-aos="fade-left">
-            <h3>Frameworks/Libraries</h3>
-            <div class="flex">
-              <p class="left">
-                React<br />
-                Flask<br />
-                AoS
-              </p>
-              <p class="right">
-                Socket.IO<br />
-                Django<br />
-                GSAP
-              </p>
-            </div>
+          <div class="card glass">
+            <h3>Frameworks/<br />Libraries</h3>
+            <p class="skill">
+              React<br />
+              Flask<br />
+              AoS<br />
+              Socket.IO<br />
+              GSAP
+            </p>
           </div>
-          <div class="card glass" data-aos="zoom-in">
+          <div class="card glass">
             <h3>Other</h3>
-            <div class="flex">
-              <p class="left">
-                Sass<br />
-                Tailwind<br />
-                Bootstrap
-              </p>
-              <p class="right">
-                Git & Github<br />
-                GIMP<br />
-                Adobe XD
-              </p>
-            </div>
+            <p class="skill">
+              Sass<br />
+              Tailwind<br />
+              Git & Github<br />
+              GIMP<br />
+              Adobe XD
+            </p>
           </div>
         </div>
       </div>
