changed meta desc.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="DevRJ portfolio a web developer" />
+    <meta
+      name="description"
+      content="DevRJ portfolio. A web developer and designer from germany."
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
