--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <ul class="flex">
                 <li>
                   <a class="close"
-                    >Close menu <img src="img/close.svg" alt="close menu"
+                    >Close <img src="img/close.svg" alt="close menu"
                   /></a>
                 </li>
                 <li><a href="#heroSection">Home</a></li>
