--- a/index.html
+++ b/index.html
@@ -375,9 +375,9 @@
           method="POST"
         >
           <label for="name">Name:</label>
-          <input type="text" name="name" id="name" />
+          <input type="text" name="name" id="name" required />
           <label for="email">Email:</label>
-          <input type="email" name="email" id="email" />
+          <input type="email" name="email" id="email" required />
           <label for="message">Your Message:</label>
           <textarea name="message" id="message" cols="30" rows="10"></textarea>
           <button type="submit" class="btn">Send</button>
@@ -398,10 +398,10 @@
                 ><img src="img/github.svg" alt=""
               /></a>
               <a
-                href="https://facebook.com"
+                href="https://www.linkedin.com/in/jarek-romanov-8b0017202/"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img src="img/facebook.svg" alt=""
+                ><img src="img/linkedin.svg" alt=""
               /></a>
               <a
                 href="https://twitter.com"
