--- a/index.html
+++ b/index.html
@@ -379,7 +379,13 @@
           <label for="email">Email:</label>
           <input type="email" name="email" id="email" required />
           <label for="message">Your Message:</label>
-          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            required
+          ></textarea>
           <button type="submit" class="btn">Send</button>
         </form>
       </div>
