--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="icons/apple-touch-icon.png"
+      href="assets/icons/fav/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="icons/favicon-32x32.png"
+      href="assets/icons/fav/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="icons/favicon-16x16.png"
+      href="assets/icons/fav/favicon-16x16.png"
     />
-    <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.ico" />
-    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="assets/icons/fav/favicon.ico"
+    />
+    <link
+      rel="mask-icon"
+      href="assets/icons/fav/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="theme-color" content="#ffffff" />
     <title>Dev RJ</title>
     <link
@@ -39,7 +47,7 @@
       <div class="container">
         <div class="navigation">
           <div class="flex">
-            <img src="img/logo.svg" alt="logo" class="logo" />
+            <img src="assets/logo.svg" alt="logo" class="logo" />
             <nav>
               <ul class="flex">
                 <li><a href="#heroSection">Home</a></li>
@@ -48,12 +56,12 @@
                 <li><a href="#contactSection">Contact</a></li>
               </ul>
             </nav>
-            <img src="img/menu.svg" alt="menu" class="menu" />
+            <img src="assets/icons/menu.svg" alt="menu" class="menu" />
             <div class="mobile-nav">
               <ul class="flex">
                 <li>
                   <a class="close"
-                    >Close <img src="img/close.svg" alt="close menu"
+                    >Close <img src="assets/icons/close.svg" alt="close menu"
                   /></a>
                 </li>
                 <li><a href="#heroSection">Home</a></li>
@@ -68,13 +76,13 @@
     </header>
 
     <section class="hero" id="heroSection">
-      <div class="bg"></div>
       <div class="container">
         <div class="content">
           <h1>Beautiful creative<br /><span>Solutions for everyone.</span></h1>
           <p>Romanov Jaroslav <span>-Developer</span></p>
           <a href="#workSection" class="btn">My work</a>
         </div>
+        <img src="assets/dev.svg" alt="" />
       </div>
     </section>
 
@@ -92,7 +100,7 @@
               </p>
             </div>
             <img
-              src="img/projects/onlineChessCombined.jpg"
+              src="assets/projects/onlineChessCombined.jpg"
               alt=""
               data-aos="zoom-in"
             />
@@ -133,7 +141,7 @@
               </p>
             </div>
             <img
-              src="img/projects/imageFilterCombined.jpg"
+              src="assets/projects/imageFilterCombined.jpg"
               alt=""
               data-aos="zoom-in"
             />
@@ -172,7 +180,7 @@
               </p>
             </div>
             <img
-              src="img/projects/sortingAlgo-java.png"
+              src="assets/projects/sortingAlgo-java.png"
               alt=""
               data-aos="zoom-in"
             />
@@ -205,7 +213,7 @@
               </p>
             </div>
             <img
-              src="img/projects/pathfindingAlgo-python.png"
+              src="assets/projects/pathfindingAlgo-python.png"
               alt=""
               data-aos="zoom-in"
             />
@@ -237,7 +245,7 @@
               </p>
             </div>
             <img
-              src="img/projects/magXShopCombined.jpg"
+              src="assets/projects/magXShopCombined.jpg"
               alt=""
               data-aos="zoom-in"
             />
@@ -271,7 +279,7 @@
               href="https://github.com/RomanJ55?tab=repositories"
               target="_blank"
               rel="noopener noreferrer"
-              >More Projects <img src="img/arrow-circle-right.svg" alt=""
+              >More Projects <img src="assets/icons/arrow-right.svg" alt=""
             /></a>
           </div>
         </div>
@@ -322,7 +330,7 @@
         <h2>My services</h2>
         <div class="cards">
           <div class="card" data-aos="flip-right">
-            <img src="img/pencil.svg" alt="" />
+            <img src="assets/icons/pencil.svg" alt="" />
             <div class="title">
               <h3>Unique design</h3>
               <p>
@@ -332,7 +340,7 @@
             </div>
           </div>
           <div class="card" data-aos="flip-left">
-            <img src="img/mobile-check.svg" alt="" />
+            <img src="assets/icons/mobile-check.svg" alt="" />
             <div class="title">
               <h3>Responsive Layout</h3>
               <p>
@@ -342,7 +350,7 @@
             </div>
           </div>
           <div class="card" data-aos="flip-right">
-            <img src="img/search-replace.svg" alt="" />
+            <img src="assets/icons/search-replace.svg" alt="" />
             <div class="title">
               <h3>Multiple Revisions</h3>
               <p>
@@ -352,7 +360,7 @@
             </div>
           </div>
           <div class="card" data-aos="flip-left">
-            <img src="img/fastright.svg" alt="" />
+            <img src="assets/icons/fastright.svg" alt="" />
             <div class="title">
               <h3>Fast delivery</h3>
               <p>
@@ -394,26 +402,26 @@
     <footer>
       <div class="container">
         <div class="flex">
-          <img src="img/logo.svg" alt="" class="footer-logo" />
+          <img src="assets/logo.svg" alt="" class="footer-logo" />
           <div class="social">
             <div class="flex">
               <a
                 href="https://github.com/RomanJ55"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img src="img/github.svg" alt=""
+                ><img src="assets/icons/github.svg" alt=""
               /></a>
               <a
                 href="https://www.linkedin.com/in/jarek-romanov-8b0017202/"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img src="img/linkedin.svg" alt=""
+                ><img src="assets/icons/linkedin.svg" alt=""
               /></a>
               <a
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer"
-                ><img src="img/twitter.svg" alt=""
+                ><img src="assets/icons/twitter.svg" alt=""
               /></a>
             </div>
           </div>
