Adjusted projects iner spacing; minor content changes

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               Java<br />
               HTML<br />
               CSS<br />
-              SQL
+              Sass
             </p>
           </div>
           <div class="card glass">
@@ -306,17 +306,18 @@
             <p class="skill">
               React<br />
               Flask<br />
-              AoS<br />
               Socket.IO<br />
-              GSAP
+              GSAP<br />
+              AoS
             </p>
           </div>
           <div class="card glass">
             <h3>Other</h3>
             <p class="skill">
-              Sass<br />
-              Tailwind<br />
               Git & Github<br />
+              Tailwind<br />
+              Parcel<br />
+              Res Viewer<br />
               GIMP<br />
               Adobe XD
             </p>
